# rust-1brc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
