[package]
name = "rust-1brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fast-float = "0.2"
fxhash = "0.2.1"
rayon = "1.10.0"
lazy_static = "1.4.0"
memchr = "2.7.2"
memmap2 = "0.9.4"

[toolchain]
channel = "nightly"

[features]
slice_split_once = []